[RasPi] Webserver - Triangulation

--- a/RasPi/Webseite/Webserver/Views/Shared/_Layout.cshtml
+++ b/RasPi/Webseite/Webserver/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Sensor" asp-action="Index">Übersicht</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Sensor" asp-action="Triangulation">Triangulation</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Settings" asp-action="Index">Einstellungen</a>
                         </li>
                     </ul>
